# wooksgram_django

./: pyproject.toml
wooksgram/: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
wooksgram/config/: urls.py  wsgi.py
wooksgram/config/settings/: base.py  local.py  production.py  test.py
wooksgram/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
wooksgram/requirements/: local.txt
wooksgram/wooksgram/: conftest.py
wooksgram/wooksgram/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
wooksgram/wooksgram/posts/: models.py  views.py
wooksgram/wooksgram/posts/migrations/: 0001_initial.py
wooksgram/wooksgram/templates/: base.html
wooksgram/wooksgram/templates/users/: main.html  signup.html
wooksgram/wooksgram/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
wooksgram/wooksgram/users/migrations/: 0001_initial.py  0002_user_bio_user_followers_user_following_user_gender_and_more.py
wooksgram/wooksgram/users/tests/: test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
